# jitome-kingdom-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
spec/: Janken.tla
src/: domain.rs  infra.rs  initializer.rs  main.rs  web.rs  wrapper.rs
src/domain/: interface.rs  model.rs  service.rs
src/domain/model/: authorization.rs  gacha_event.rs  gift.rs  identity.rs  janken_event.rs  point_event.rs  ranking.rs  user.rs
src/domain/service/: gacha_service.rs  gift_distribute_service.rs  gift_distribution_service.rs  gift_service.rs  janken_process_service.rs  janken_service.rs  point_process_service.rs  point_ranking_service.rs  ranking_process_service.rs  user_icon_upload_service.rs  user_me_service.rs  user_service.rs
src/infra/: db_connector.rs  dynamo_client.rs  gacha_event_repository.rs  gift_repository.rs  janken_event_repository.rs  jwt_handler.rs  point_repository.rs  ranking_repository.rs  s3_client.rs  user_icon_uploader.rs  user_repository.rs
src/wrapper/: base64.rs  error.rs  rand_gen.rs  server.rs  unixtime.rs  url.rs
