[package]
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"
name = "jitome-kingdom-api"
version = "0.1.0"

[dependencies]
hyper = "0.13.3"
path-tree = "0.1.9"
futures = "0.3.4"
log = "0.4.8"
http = "0.2.0"
failure = "0.1.7"
tokio = { version = "0.2.13", features = ["full"] }
env_logger = "0.7.1"
serde = "1.0.104"
serde_json = "1.0.48"
dotenv = "0.15.0"
chrono = "0.4.11"
uuid = { version = "0.8.1", features = ["v4"] }
async-trait = "0.1.24"
debil = "0.1.0"
debil-mysql = "0.1.0"
