[package]
authors = ["myuon <ioi.joi.koi.loi@gmail.com>"]
edition = "2018"
name = "jitome-kingdom-api"
version = "0.1.0"

[dependencies]
hyper = "0.13.3"
path-tree = "0.1.9"
futures = "0.3.4"
log = "0.4.8"
http = "0.2.0"
failure = "0.1.7"
tokio = { version = "0.2.13", features = ["full"] }
env_logger = "0.7.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
dotenv = "0.15.0"
chrono = "0.4.11"
chrono-tz = "0.5.1"
uuid = { version = "0.8.1", features = ["v4"] }
async-trait = "0.1.24"
debil = "0.2.1"
debil-mysql = "0.2.0"
debil-dynamodb = "0.1.1"
mysql_async = "0.22.1"
biscuit = "0.4.2"
reqwest = { version = "0.10", features = ["json"] }
rand = "0.7.3"
rusoto_core = "0.43.0"
rusoto_dynamodb = "0.43.0"
rusoto_s3 = "0.43.0"
maplit = "1.0.2"
bytes = "0.5.4"
regex = "1"
base64 = "0.12.0"
